<resources>
    <string name="app_name">IDF Tweeting</string>

    <!-- Splash -->

    <!-- Main Screen Activity String -->
    <string name="internet_connection_rationale">This app needs access to your Internet so you get offers.</string>
    <string name="connectivity_problemse">Connectivity Problems. Please try again later.</string>

    <!-- Login Activity -->
    <string name="login_title">Connecting</string>
    <string name="login_second_title">Regular Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hing">Password</string>
    <string name="login_no_account_title">No account yet? <u>Create one</u></string>
    <string name="login_forget_password_title">Forget Your Password? <u>Press Here!</u></string>
    <string name="login_login_button_text">Login</string>
    <string name="facebook_app_id" translatable="false">421931941654435</string>

    <!-- Sign Up Activity -->
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_second_title">Simple Sign Up</string>
    <string name="sign_up_name_hint">Name</string>
    <string name="sign_up_mobile_hint">Mobile Number</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_join_date_hint">Join Army Date</string>
    <string name="sign_up_send_button_text">Send</string>
    <string name="sign_up_accept">Accept Conditions</string>
    <string name="sign_up_offers">Accept Offers</string>
    <string name="missing_data_all">All fields must be filled.</string>
    <string name="sighn_up_home_area_title">County</string>
    <string name="missing_name">Name is missing!</string>
    <string name="missing_phone">Phone number is missing!</string>
    <string name="missing_email">Email is missing</string>
    <string name="missing_join_date">Join date is missing</string>
    <string name="missing_living_area">Living area is missing</string>
    <string name="missing_password">Password is missing</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="sighn_up_password_hint">Password</string>
    <string name="sighn_up_re_password_hint">Verify Password</string>
    <string name="sighn_up_already_registered">Already a member? <u>Login</u></string>

    <!-- Send My Details Activity -->
    <string name="send_my_details_title">Send Details</string>
    <string name="sign_up_age_hint">Age</string>
    <string name="send_my_details_citizenship_title">Citizen</string>
    <string name="send_my_details_visa_title">Visa</string>
    <string name="send_my_details_call_me_button_text">Call Me</string>

    <!-- Drawer Activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Main Menu</string>
    <string name="action_settings">Settings</string>

    <!-- App Exit Dialog -->
    <string name="exit_title">Exit</string>
    <string name="exit_message">You are about to exit the application. Do you want to continue with exit?</string>

    <!-- Opening Fragment -->

    <!-- Main Meny -->
    <string name="nav_register">Register</string>
    <string name="nav_connect">Connect</string>
    <string name="nav_personal">Personal</string>
    <string name="nav_disconnect">Disconnect</string>
    <string name="nav_offers">Offers</string>
    <string name="nav_studies">Studies</string>
    <string name="nav_jobs">Jobs</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_condition">Conditions</string>
    <string name="nav_ad_here">Ad Here</string>

    <!-- Studies Contact -->
    <string name="need_study_consaltent_title">Please contact me about studies</string>
    <string name="studies_name_hint">Name</string>
    <string name="studies_mobile_hint">Phone Number</string>
    <string name="studies_domain_hint">Study Domain</string>
    <string name="studies_home_area_title">Living Area</string>
    <string name="studies_certification_title">Bagrot</string>
    <string name="studies_call_me_button_text">Call Me</string>
    <string name="missing_domain">Missing Study Domain</string>
    <string name="studies_how_take_advantage_of_pikadon">How would you like to use the Pikadon?</string>
    <string name="studies_search_by_countries">Search by Countries</string>

    <!--Forget Password Activity-->
    <string name="forget_password_title">I forgot my password</string>
    <string name="forget_password_second_title">Please enter your email for recovery your password</string>
    <string name="forget_password_email_hint">Email</string>
    <string name="forget_password_send_button_text">Send</string>
    <string name="forget_password_login_title"><u>Back to login screen</u></string>

    <!-- Forget Password Dialog -->
    <string name="details_sent_successfully">Details sent successfully</string>

    <!-- Home Fragment Screen Strings -->
    <string name="home_work_abroad">Work abroad</string>
    <string name="home_studies">Studies</string>
    <string name="home_benefits">Benefits</string>

    <!-- Benefits Fragments Screen Strings -->
    <string name="benefit_brands_title_text">Brands and Networks</string>
    <string name="benefit_locals_title_text">Local Businesses</string>

    <!-- Studies Fragments Screen Strings -->
    <string name="studies_screen_title">Confused? Don\'t know what to learn? fill the form and our consultent will call you</string>
    <string name="studies_full_name_hint">Full Name</string>
    <string name="studies_domain_name_hint">What would you like to learn?</string>
    <string name="studies_living_area_hint">Living Arae</string>
    <string name="studies_talk_to_me">Talk To Me</string>
    <string name="studies_using_the_pikadon">How would you like to take advantage of the deposit?</string>
    <string name="studies_psichometrics">Psichometric</string>
    <string name="studies_search_by_location">Search By Loacation</string>
    <string name="studies_usa">USA</string>
    <string name="studies_australia">Australia</string>
    <string name="studies_other">Other</string>
    <string name="studies_information">Information</string>

    <!-- Work Fragments Screen Strings -->
    <string name="works_screen_title">Fill your details for jobs offers</string>
    <string name="works_phone_number_hint">Phone</string>
    <string name="work_age_hint">Age</string>
    <string name="work_find_for_me">Find A Job For Me</string>

    <!-- Contact Us Fragments Screen Strings -->
    <string name="contct_us_full_name">*Full Name</string>
    <string name="contact_us_email">*Email</string>
    <string name="contact_us_subject">*Subject</string>
    <string name="contact_us_content">*Content</string>
    <string name="contact_us_fields_msg">*Must</string>
    <string name="contact_us_send">Send</string>

    <!-- Regulations Fragments Screen Strings -->
    <string name="regulation_title">Regulations</string>
    <string name="regulation_content">Content</string>

    <!-- Ad Fragments Screen Strings -->
    <string name="ad_ad_with_us">Ad With Us</string>
    <string name="ad_sub_title_text">Text Text Text</string>
    <string name="ad_form_title">Fill your details and we will contact you soon</string>
    <string name="ad_customers">Among our customers</string>

</resources>
