<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/shape_9_copy"
            android:title="@string/nav_offers" />
        <item
            android:id="@+id/nav_studies"
            android:icon="@drawable/shape_31"
            android:title="@string/nav_studies" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/shape_32"
            android:title="@string/nav_jobs" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact_us"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_conditions"
            android:icon="@drawable/shape_34"
            android:title="@string/nav_condition" />
        <item
            android:id="@+id/nav_ad"
            android:icon="@drawable/ad_icon"
            android:title="@string/nav_ad_here" />
    </group>

</menu>
