<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/send_my_details_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/login_title_text_size" />

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/round_close_black_18" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp"
            tools:ignore="ExtraText">

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/sendMyDetailsNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <!-- mobile number -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/sendMyDetailsPhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_mobile_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <!-- Age Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/sendMyDetailsAgeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_age_hint"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <!-- Citizenship Spinner -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="1.5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/send_my_details_citizenship_title"
                    android:textSize="@dimen/login_second_title_text_size" />

                <Spinner
                    android:id="@+id/sendMyDetailsCitizenshipSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </LinearLayout>

            <!-- Visa Spinner -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="1.5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/send_my_details_visa_title"
                    android:textSize="@dimen/login_second_title_text_size" />

                <Spinner
                    android:id="@+id/sendMyDetailsVisaSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/sendMyDetailsAcceptEula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up_accept"
                android:textColor="@color/mainTextColor"
                android:textSize="@dimen/sign_up_check_box_title_text_size" />

            <CheckBox
                android:id="@+id/sendMyDetailsAcceptOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/sign_up_offers"
                android:textColor="@color/mainTextColor"
                android:textSize="@dimen/sign_up_check_box_title_text_size" />

            <!-- Call Me Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sendMyDetailsCallMeButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:text="@string/send_my_details_call_me_button_text"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>