<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <com.em_projects.tweetings.ui.custom_text.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="3"
            android:text="טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט טקסט"
            android:textColor="@color/contact_us_title_text_color"
            android:textSize="16sp"
            app:custom_font="opensanshebrew-regular-webfont" />

        <com.em_projects.tweetings.ui.custom_text.CustomEditText
            android:id="@+id/contactUsFullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/contact_us_edit_text_bg_shape"
            android:gravity="center_vertical"
            android:hint="@string/contct_us_full_name"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/contact_us_title_text_color"
            android:textColorHint="@color/contact_us_title_text_color"
            android:textSize="16dp"
            app:custom_font="opensanshebrew-regular-webfont" />

        <com.em_projects.tweetings.ui.custom_text.CustomEditText
            android:id="@+id/contactUsEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/contact_us_edit_text_bg_shape"
            android:gravity="center_vertical"
            android:hint="@string/contact_us_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/contact_us_title_text_color"
            android:textColorHint="@color/contact_us_title_text_color"
            android:textSize="16dp"
            app:custom_font="opensanshebrew-regular-webfont" />

        <com.em_projects.tweetings.ui.custom_text.CustomEditText
            android:id="@+id/contactUsSubjectEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/contact_us_edit_text_bg_shape"
            android:gravity="center_vertical"
            android:hint="@string/contact_us_subject"
            android:inputType="textEmailSubject"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/contact_us_title_text_color"
            android:textColorHint="@color/contact_us_title_text_color"
            android:textSize="16dp"
            app:custom_font="opensanshebrew-regular-webfont" />

        <com.em_projects.tweetings.ui.custom_text.CustomEditText
            android:id="@+id/contactUsContentEditText"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/contact_us_edit_text_bg_shape"
            android:gravity="top"
            android:hint="@string/contact_us_content"
            android:lines="5"
            android:paddingStart="10dp"
            android:textColor="@color/contact_us_title_text_color"
            android:textColorHint="@color/contact_us_title_text_color"
            android:textSize="16dp"
            app:custom_font="opensanshebrew-regular-webfont" />

        <com.em_projects.tweetings.ui.custom_text.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/contact_us_edit_text_bg_color"
            android:text="@string/contact_us_fields_msg"
            android:textColor="@color/contact_us_title_text_color"
            android:textSize="16dp"
            app:custom_font="opensanshebrew-regular-webfont" />

    </LinearLayout>

    <com.em_projects.tweetings.ui.custom_text.CustomButton
        android:id="@+id/contactUsSendButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/sendMyDetailsAcceptOffers"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/contact_us_send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_up_check_box_title_text_size"
        android:textStyle="bold"
        app:custom_font="opensanshebrew-bold-webfont" />

</RelativeLayout>